fixed issue with alignment on home section.

--- a/css/alt.css
+++ b/css/alt.css
@@ -71,6 +71,8 @@ nav-menu {
     background-color: rgb(50,50,50);
     flex-direction: row;
     display: flex;
+    justify-content: center;
+    align-items: center;
     order: 1;
 }
 
